# docs/swagger.json
@@ -140,33 +140,6 @@
                                 }
                             ]
                         }
-                    },
-                    "404": {
-                        "description": "A movie with the specified movieid could not be found",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/main.JsonResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/main.Movie"
-                                            }
-                                        },
-                                        "message": {
-                                            "type": "string"
-                                        },
-                                        "type": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
                     }
                 }
             }
