# main.go
@@ -200,7 +200,6 @@ func createMovie(writer http.ResponseWriter, reader *http.Request) {
 // @Produce json
 // @Param movieid path string true "Movie ID"
 // @Success 200 {object} JsonResponse{type=string,data=[]Movie,message=string} "Successfully delete a movie with the specified movieid"
-// @Failure 404 {object} JsonResponse{type=string,data=[]Movie,message=string} "A movie with the specified movieid could not be found"
 // @Router /deletemovie/{movieid}/ [delete]
 func deleteMovie(writer http.ResponseWriter, reader *http.Request) {
 	log.Println("Endpoint hit: /deletemovie/{movieid}")
